# realty-bot

./: .env.example  .gitignore  Procfile  README.md  bot.py  constants.py  docker-compose.yml  dockerfile  dockerfile.railway  entrypoint.sh  pyproject.toml  railway.toml
botmodels/: apps.py  functions.py  models.py  tasks.py
botmodels/management/commands/: seed.py
botmodels/migrations/: 0001_initial.py  0002_groupprofile_deleted.py  0003_remove_userprofile_name_userprofile_chat_id_and_more.py  0004_alter_userprofile_chat_id_alter_userprofile_user_id.py  0005_userprofile_full_name.py  0006_tgsetting_last_task_eta.py
config/: celery.py  settings.py
